need to rethink page switcher function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- login landing page -->
     <div id="landing-page-container">
         <div id="landing-page-hero">
-            <div id="registration-container" style="display: none;">
+            <div id="registration-container" >
                 <h1>Please Register Below</h1>
                 <form action="" id="registration-form">
                     <ul>
