game mostly done. need to add timer and win case

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- jquery cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
-    <title>The Isle of Sachorus</title>
+    <title>The Marshes</title>
 </head>
 <body>
     <!-- login landing page -->
