can now play again at the end of the game

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         <div id="post-game">
             <h1 id="final-time"></h1>
             <h3 id="thanks">Thanks for playing The Marshes!</h3>
-            <h3>Please refresh the page if you'd like to play again.</h3>
+            <h3>Please click the button if you'd like to play again.</h3>
+            <button id="play-again">AGAIN</button>
         </div>
     </div>
     <!-- game canvas -->
