added more styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="landing-page-hero" class="landing-hero">
             <div id="shadow">
                 <div class="auth-half" id="registration-container">
-                    <h1>Please Register Below</h1>
+                    <h1>Register</h1>
                     <form action="" id="registration-form">
                         <ul>
                             <li>
@@ -100,8 +100,8 @@
                 <img src="./assets/images/game-screenshot.PNG" alt="game-screenshot" id="game-screenshot">
                 <div id="description">
                     <h3>Your task:</h3>
-                    <p>There are some melons that need collecting! I know just the person for the job. Try to do it as quickly as possible!<br>
-                    Login to get started!</p>
+                    <p>There are some melons that need collecting! I know just the person for the job. Try to do it as quickly as possible!</p>
+                    <p>Login to get started!</p>
                 </div>
                 
             </div>
