nearly complete. need to style a couple things still

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img src="./assets/images/game-screenshot.PNG" alt="game-screenshot" id="game-screenshot">
                 <div id="description">
                     <h3>Your task:</h3>
-                    <p>There are some melons that need collecting! I know just the person for the job. Try to do it as quickly as possible!</p>
+                    <p>There are some melons that need collecting! I know just the person for the job. Try to do it as quickly as possible! Careful though, you don't want to fall out of the world...</p>
                     <p>Login to get started!</p>
                 </div>
                 
