added greeting banner. still needs more js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <title>The Marshes' Melons</title>
 </head>
 <body>
+    <header>
+        <h3 id="greeting">Welcome, {name here}</h3>
+    </header>
     <!-- login landing page -->
     <div id="landing-page-container">
         <div id="landing-page-hero" class="landing-hero">
